fix docs import error

--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -10,11 +10,12 @@ description: Use the testimonial component to display a quote from a customer or
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
+import {TestimonialQuoteMarkColors} from '@primer/react-brand'
 import {Box as Container, Label} from '@primer/react'
 import {PropTableValues} from '../../../src/components'
 
 ```js
-import {Testimonial, TestimonialQuoteMarkColors} from '@primer/react-brand'
+import {Testimonial} from '@primer/react-brand'
 ```
 
 ## Examples
