Updated Bento Box Docs

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -209,10 +209,12 @@ The Bento.Item component API supports all standard HTML attribute props for the 
 | Name              | Type                                                                                                                                                                  |  Default   | Required | Description                                                  |
 | :---------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------: | :------- | ------------------------------------------------------------ |
 | `className`       | `string`                                                                                                                                                              |            | `false`  | Sets a custom class on the root element                      |
-| `children`        | [`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) |            | `false`  | Content that corrosponds to the adjacent visual.             |
-| `padding`         | `"condensed"`, `"normal"`, `"spacious"`                                                                                                                               |            | `false`  | Sets a custom class on the root element                      |
-| `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"center"` | `false`  | The horozontal alignment of children within the `Bento.Item` |
-| `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"center"` | `false`  | The vertical alignment of children within the `Bento.Item`   |
+| `children`        | [`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) |            | `false`  | Content that corrosponds to the adjacent visual              |
+| `leadingVisual`   | `ReactElement`, `Icon`                                                                                                                                                |            | `false`  | Sets the icon before the heading text                        |
+| `padding`         | `"condensed"`, `"normal"`, `"spacious"`                                                                                                                               | `"normal"` | `false`  | Sets a custom class on the root element                      |
+| `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The horozontal alignment of children within the `Bento.Item` |
+| `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The vertical alignment of children within the `Bento.Item`   |
+| `fixedBottomLink` | `boolean`                                                                                                                                                             |  `false`   | `false`  | The vertical alignment of children within the `Bento.Item`   |
 
 The Bento.Content component API supports all standard HTML attribute props for the interface HTMLDivElement, while providing some additional behavior as described above.
 
