Updated PR Documentation

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -190,41 +190,41 @@ The Bento component API supports all standard HTML attribute props for the inter
 
 ### Bento.Item
 
-| Name                 | Type                                                                                   |  Default  | Required | Description                                                                                                     |
-| :------------------- | :------------------------------------------------------------------------------------- | :-------: | :------- | --------------------------------------------------------------------------------------------------------------- |
-| `className`          | `string`                                                                               |           | `false`  | Sets a custom class on the root element                                                                         |
-| `children`           | `React.ReactNode`, `React.ReactNode[]`                                                 |           | `false`  | The children to be rendered within the `Bento.Item` component                                                   |
-| `columnStart`        | `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12`, `ResponsiveColumnIndex` |           | `false`  | The column number in which this content should start                                                            |
-| `columnSpan`         | `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12`, `ResponsiveColumnIndex` |           | `false`  | The number of columns this content should span                                                                  |
-| `rowStart`           | `number`, `ResponsiveRowIndex`                                                         |           | `false`  | The row number in which this content should start                                                               |
-| `rowSpan`            | `number`, `ResponsiveRowIndex`                                                         |           | `false`  | The number of rows this content should span                                                                     |
-| `flow`               | `"row"`, `"column"`, `ResponsiveFlow`                                                  |           | `false`  | The flow of the `Bento.Content` and `Bento.Visual` within the `Bento.Item`                                      |
-| `colorMode`          | `"light"`, `"dark"`                                                                    | `"light"` | `false`  | The color mode specified for this `Bento.Item`                                                                  |
-| `visualAsBackground` | `boolean`                                                                              |  `false`  | `false`  | Determines if the Visual child is set as the background for the `Bento.Item` with the `Bento.Content` overlayed |
+| Name                 | Type                                                                                   |  Default  | Required | Description                                                                                                                     |
+| :------------------- | :------------------------------------------------------------------------------------- | :-------: | :------- | ------------------------------------------------------------------------------------------------------------------------------- |
+| `className`          | `string`                                                                               |           | `false`  | Sets a custom class on the root element                                                                                         |
+| `children`           | `React.ReactNode`, `React.ReactNode[]`                                                 |           | `false`  | The children to be rendered within the `Bento.Item`                                                                             |
+| `columnStart`        | `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12`, `ResponsiveColumnIndex` |           | `false`  | The column number in which this content should start                                                                            |
+| `columnSpan`         | `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12`, `ResponsiveColumnIndex` |           | `false`  | The number of columns this content should span                                                                                  |
+| `rowStart`           | `number`, `ResponsiveRowIndex`                                                         |           | `false`  | The row number in which this content should start                                                                               |
+| `rowSpan`            | `number`, `ResponsiveRowIndex`                                                         |           | `false`  | The number of rows this content should span                                                                                     |
+| `flow`               | `"row"`, `"column"`, `ResponsiveFlow`                                                  |           | `false`  | The flow of the `Bento.Content` and `Bento.Visual` within the `Bento.Item`                                                      |
+| `colorMode`          | `"light"`, `"dark"`                                                                    | `"light"` | `false`  | The color mode specified for this `Bento.Item`                                                                                  |
+| `visualAsBackground` | `boolean`                                                                              |  `false`  | `false`  | Determines if the `Bento.Visual` child element is set as the background for the `Bento.Item` with the `Bento.Content` overlayed |
 
 The Bento.Item component API supports all standard HTML attribute props for the interface HTMLDivElement, while providing some additional behavior as described above.
 
 ### Bento.Content
 
-| Name              | Type                                                                                                                                                                  |  Default   | Required | Description                                                  |
-| :---------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------: | :------- | ------------------------------------------------------------ |
-| `className`       | `string`                                                                                                                                                              |            | `false`  | Sets a custom class on the root element                      |
-| `children`        | [`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) |            | `false`  | Content that corrosponds to the adjacent visual              |
-| `leadingVisual`   | `ReactElement`, `Icon`                                                                                                                                                |            | `false`  | Sets the icon before the heading text                        |
-| `padding`         | `"condensed"`, `"normal"`, `"spacious"`                                                                                                                               | `"normal"` | `false`  | Sets a custom class on the root element                      |
-| `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The horozontal alignment of children within the `Bento.Item` |
-| `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The vertical alignment of children within the `Bento.Item`   |
-| `fixedBottomLink` | `boolean`                                                                                                                                                             |  `false`   | `false`  | The vertical alignment of children within the `Bento.Item`   |
+| Name              | Type                                                                                                                                                                  |  Default   | Required | Description                                                                                                                                               |
+| :---------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------: | :------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `className`       | `string`                                                                                                                                                              |            | `false`  | Sets a custom class on the root element                                                                                                                   |
+| `children`        | [`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) |            | `false`  | The children to be rendered within the `Bento.Content`                                                                                                    |
+| `leadingVisual`   | `ReactElement`, `Icon`                                                                                                                                                |            | `false`  | Sets the icon before the heading text                                                                                                                     |
+| `padding`         | `"condensed"`, `"normal"`, `"spacious"`                                                                                                                               | `"normal"` | `false`  | Sets a custom class on the root element                                                                                                                   |
+| `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The horizontal alignment of children within the `Bento.Content`                                                                                           |
+| `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                                                                     | `"start"`  | `false`  | The vertical alignment of children within the `Bento.Content`. This cannot be used with the `fixedBottomLink` property.                                   |
+| `fixedBottomLink` | `boolean`                                                                                                                                                             |  `false`   | `false`  | Sets the link within the `Bento.Content` to have a margin-top of `auto` pushing it to the bottom. With this set you can not vertically align the content. |
 
 The Bento.Content component API supports all standard HTML attribute props for the interface HTMLDivElement, while providing some additional behavior as described above.
 
 ### Bento.Visual
 
-| Name        | Type                                    |   Default   | Required | Description                                                                                               |
-| :---------- | :-------------------------------------- | :---------: | :------- | --------------------------------------------------------------------------------------------------------- |
-| `className` | `string`                                |             | `false`  | Sets a custom class on the root element                                                                   |
-| `fillMedia` | `boolean`                               |   `true`    | `false`  | Determine how the Image reacts within its container. Either filling the container or contained within     |
-| `position`  | `string`                                | `"50% 50%"` | `false`  | The positioning of the image. This can be set to `"50% 100%"` to be placed on the bottom of its container |
-| `padding`   | `"condensed"`, `"normal"`, `"spacious"` |             | `false`  | Sets a custom class on the root element                                                                   |
+| Name        | Type                                    |   Default   | Required | Description                                                                                              |
+| :---------- | :-------------------------------------- | :---------: | :------- | -------------------------------------------------------------------------------------------------------- |
+| `className` | `string`                                |             | `false`  | Sets a custom class on the root element                                                                  |
+| `fillMedia` | `boolean`                               |   `true`    | `false`  | Determines how the visual reacts within its container. Either filling the container or contained within. |
+| `position`  | `string`                                | `"50% 50%"` | `false`  | The positioning of the visual.                                                                           |
+| `padding`   | `"condensed"`, `"normal"`, `"spacious"` |             | `false`  | Sets a custom class on the root element                                                                  |
 
 The Bento.Visual component API supports all standard HTML attribute props for the interface HTMLDivElement, while providing some additional behavior as described above.
