Optional Size Keys

--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -86,7 +86,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
   <Bento.Item
     columnSpan={{
@@ -97,7 +97,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
   <Bento.Item
     columnSpan={{
@@ -108,7 +108,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
   <Bento.Item
     columnSpan={{
@@ -119,7 +119,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
   <Bento.Item
     columnSpan={{
@@ -130,7 +130,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
   <Bento.Item
     columnSpan={{
@@ -141,7 +141,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
       xlarge: 3,
       xxlarge: 2,
     }}
-    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4, xlarge: 4, xxlarge: 4}}
+    rowSpan={{xsmall: 1, small: 2, medium: 3, large: 4}}
   />
 </Bento>
 ```
@@ -154,9 +154,6 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
     xsmall: 'row',
     small: 'row',
     medium: 'column',
-    large: 'column',
-    xlarge: 'column',
-    xxlarge: 'column',
   }}
 >
   <Bento.Content padding="normal">
