fix button links

--- a/apps/docs/content/github-staff/storybook.mdx
+++ b/apps/docs/content/github-staff/storybook.mdx
@@ -15,10 +15,14 @@ Please note that access to this instance is restricted to signed-in collaborator
 
 <p>
   <Stack padding="none" direction="horizontal">
-    <Button variant="primary" href="https://gh.io/primer-brand-storybook">
+    <Button
+      as="a"
+      variant="primary"
+      href="https://gh.io/primer-brand-storybook"
+    >
       Go to Storybook
     </Button>
-    <Button href="https://github.slack.com/archives/C03FY9G00NS">
+    <Button as="a" href="https://github.slack.com/archives/C03FY9G00NS">
       Request access
     </Button>
   </Stack>
